# cel-go

./: benchstat_amd64.sh  benchstat_amd64.txt  benchstat_arm64.sh  benchstat_arm64.txt  go.mod  go.sum  interpreter_amd64.txt  interpreter_arm64.txt  jit_amd64.txt  jit_arm64.txt  jit_cpu_amd64.out  jit_cpu_arm64.out  pprof_amd64.sh  pprof_arm64.sh
cel/: .gitignore  BUILD.bazel  cel_example_test.go  cel_test.go  decls.go  decls_test.go  env.go  env_test.go  folding.go  folding_test.go  inlining.go  inlining_test.go  io.go  io_test.go  library.go  macro.go  macro_test.go  optimizer.go  optimizer_test.go  options.go  program.go  prompt.go  prompt_test.go  validator.go  validator_test.go
checker/: BUILD.bazel  checker.go  checker_test.go  cost.go  cost_test.go  env.go  env_test.go  errors.go  format.go  format_test.go  mapping.go  printer.go  scopes.go  types.go
codelab/: codelab.go  go.mod
common/: BUILD.bazel  source.go
conformance/: conformance_test.go  go.mod
examples/: example_cel_eval_test.go  example_cel_member_test.go  example_cel_overload_test.go
ext/: BUILD.bazel  bindings.go  bindings_test.go  comprehensions.go  comprehensions_test.go  encoders.go  encoders_test.go  extension_option_factory.go  extension_option_factory_test.go  formatting.go  formatting_test.go  formatting_v2.go  formatting_v2_test.go  guards.go  lists.go  lists_test.go  math.go  math_test.go  native.go  native_test.go  protos.go  protos_test.go  regex.go  regex_test.go  sets.go  sets_test.go  strings.go  strings_test.go
interpreter/: BUILD.bazel  activation.go  activation_test.go  attribute_patterns.go  attribute_patterns_test.go  attributes.go  attributes_test.go  decorators.go  (+11 more)
jit/: BUILD.bazel  builtin.go  common.go  compile.go  compile_amd64.go  compile_arm64.go  errors.go  evaluate.go  ir.go  regalloc.go  regalloc_amd64.go  regalloc_arm64.go  regalloc_test.go  regsave.go  regsave_test.go  rewrite.go  rewrite_test.go  runtime.go  translate.go  translate_test.go
(+143 files in other folders)
